(Format: Year/Month/Day)
Changes for 0.9.5:
*03/07/18:
   * Fix java bug. Wasn't sending ConfigureNotify's to client (Simon)
     - also fix missing border on transient windows
     - also set some gnome hints initially
     Window.hh/cc Gnome.cc
*03/07/12:
   * Fixed 8 bpp crash (Henrik)
     ImageControl.cc 
*03/07/11:
   * Added TOOLBAR to -info (Henrik)
     main.cc
-------------------------------------------------------------------------
Changes for 0.9.4:
*03/07/10:
   * Added new toolbar theme item (Henrik)
     * toolbar.button.borderWidth: <integer>
   * Add [startup] to Remember (Simon)
       Can now add entries to apps file like:
         [startup] {xterm}
       Then "xterm" will be launched on fluxbox startup. 
       Can also give a screen option:
         [startup] (screen=1) {xterm}
       will start it on screen 1 rather than the default 0.
   * Added new rounded theme items (Henrik)
      * toolbar.shaped: <bool> this will make the toolbar shape the corners that are towards center
        of the screen
      * menu.roundCorners: <shape items> 
      * window.roundCorners: <shape items>
      Where shape items can be TopLeft TopRight BottomLeft and BottomRight
      example: menu.roundCorners: TopRight BottomLeft
     ToolbarTheme.hh/cc, Toolbar.cc/hh, FbTk/Menu.hh, FbMenu.hh/cc, Screen.hh/cc,
     MenuTheme.hh/cc, FbWinFrameTheme.hh/cc, FbWinFrame.cc/hh
   * Applied patch that keeps the fbrun_history clean by not allowing
     duplicates to get placed in the history. (Thanks David J Burger <dburger<(a|T)>hawaii.edu>)
     FbRun.cc
   * fbsetbg updates (Han)
*03/07/05:
   * Fix winclient death signalling - fixes remember issues with applying
     attributes to wrong windows (Simon)
     Remember.hh/cc AtomHandler.hh fluxbox.cc ToolbarHandler.hh/cc Ewmh.hh Gnome.hh
*03/07/04:
   * Add support in remember for grouping apps (Simon)
     Achieved by using [group], e.g.
     [group]
       [app] (title=groupme)
       [Deco] {NONE}
     [end]